--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -17,4 +17,4 @@ diskIncludes: ["*"]
 
 # This will create it in specific Tier. Replace <ComponentID>
 # (https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java)
-metricPrefix: Server|Component:<ComponentID>|Custom Metrics|Linux
+metricPrefix: "Server|Component:<ComponentID>|Custom Metrics|Linux|"
