--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -2,7 +2,7 @@
 # An availability status for NFS mounts is reported by executing the command `df | grep <fileSystem> | wc -l`.
 # displayName: the name with which the metric is reported in AppD Metric Browser. If empty, metric is reported with fileSystem as its name.
 mountedNFS:
-      - fileSystem: "/dev/sdb"
+      - fileSystem: "sda"
         displayName: "NFS1"
 
 # "diskIncludes" to fetch disk statistics only for the configured.
@@ -10,6 +10,335 @@ mountedNFS:
 # ["sda.*", "ram1", "loop0"]
 diskIncludes: ["*"]
 
+
+
+metrics:
+     #Items in Nodes|<node>|Messages - data looked up from /api/channels
+   - cpuStats:
+         - name: "user"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "nice"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "system"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "idle"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "iowait"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "irq"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "softirq"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "steal"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "guest"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "guest_nice"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - pageStats:
+         - name: "page"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "page in"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "page out"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - swapStats:
+         - name: "swap"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap page in"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap page out"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - pageSwapStats:
+         - name: "page in"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "page out"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap page in"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap page out"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "page fault"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "page major fault"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - netStats:
+         - name: "receive bytes"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "receive packets"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "receive errs"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "receive drop"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "receive fifo"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "receive frame"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "receive compressed"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "receive multicast"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit bytes"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit packets"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit errs"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit drop"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit fifo"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit colls"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit carrier"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "transmit compressed"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - diskStats:
+         - name: "major"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "minor"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "reads completed successfully"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "reads merged"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "time spent reading (ms)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "writes completed"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "writes merged"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "sectors written"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "time spent writing (ms)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "I/Os currently in progress"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "time spent doing I/Os (ms)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "weighted time spent doing I/Os (ms)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - diskUsageStats:
+         - name: "size (MB)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "used (MB)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "available (MB)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "use %"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - fileNRStats:
+         - name: "fhalloc"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "fhfree"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "fhmax"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - inodeNRStats:
+         - name: "inalloc"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "infree"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - dentriesStats:
+         - name: "dentries"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "unused"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "agelimit"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "wantpages"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - loadAvgStats:
+         - name: "load avg (1 min)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "load avg (5 min)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "load avg (15 min)"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - memStats:
+         - name: "total"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "free"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "buffers"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "cached"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap cached"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "active"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "inactive"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap total"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap free"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "dirty"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "writeback"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "mapped"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "slab"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "commit limit"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "committed_AS"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - procFileStats:
+         - name: "processes"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "procs_running"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "procs_blocked"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - procLoadAvgStats:
+         - name: "runqueue"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "count"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - procStats:
+         - name: "processes"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "running"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "blocked"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - sockUsedStats:
+         - name: "used"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - tcpInuseStats:
+         - name: "tcp"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - udpInuseStats:
+         - name: "udp"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - rawInuseStats:
+         - name: "raw"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - ipfragStats:
+         - name: "ifrag"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - mountedNFSStatus:
+         - name: "disk free space"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+   - nfsIOStats:
+         - name: "tps"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "kB_read/s"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "kb_wrtn/s"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "kB_read"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "kb_wrtn"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+
+# number of concurrent tasks
+numberOfThreads: 5
 
 
 # This will create this metric in all the tiers, under this path
