Linux Monitoring Extensions Code Review Changes

--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -269,6 +269,24 @@ metrics:
          - name: "committed_AS"
            metricType: "OBS.CUR.COL"
            collectDelta: "false"
+         - name: "used"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "used %"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap used"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "swap used %"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "real free"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
+         - name: "real free %"
+           metricType: "OBS.CUR.COL"
+           collectDelta: "false"
    - procFileStats:
          - name: "processes"
            metricType: "OBS.CUR.COL"
