--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -1,9 +1,10 @@
-# This will create this metric in all the tiers, under this path
+# Use this only if SIM is enabled
 #metricPrefix: "Custom Metrics|Linux Monitor|"
 
-# This will create it in specific Tier. Replace <ComponentID>
-# (https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java)
-metricPrefix: "Server|Component:<ComponentID>|Custom Metrics|Linux Monitor|"
+# If SIM is not enabled, then use this
+metricPrefix: "Server|Component:<TIER_ID>|Custom Metrics|Linux Monitor|"
+#To find the <COMPONENT_ID> in your environment,
+#please follow the screenshot https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
 
 # An availability status for NFS mounts is reported by executing the command `df | grep <fileSystem> | wc -l`.
 # displayName: the name with which the metric is reported in AppD Metric Browser. If empty, metric is reported with fileSystem as its name.
@@ -17,6 +18,7 @@ mountedNFS:
 filters:
   diskIncludes: [".*"]
   cpuIncludes: [".*"]
+  mountedNFS: [.*]
 
 # Replaces characters in metric name with the specified characters.
 # "replace" takes any regular expression
