Code review changes

--- a/src/main/resources/conf/config.yml
+++ b/src/main/resources/conf/config.yml
@@ -6,13 +6,8 @@ metricPrefix: "Server|Component:<TIER_ID>|Custom Metrics|Linux Monitor|"
 #To find the <COMPONENT_ID> in your environment,
 #please follow the screenshot https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
 
-# An availability status for NFS mounts is reported by executing the command `df | grep <fileSystem> | wc -l`.
-# displayName: the name with which the metric is reported in AppD Metric Browser. If empty, metric is reported with fileSystem as its name.
-#mountedNFS:
-#      - fileSystem: "sda"
-#        displayName: "NFS1"
 
-# "diskIncludes" to fetch disk statistics only for the configured.
+# Filters to fetch data only for the configured.
 # Ex: ["*"] fetches all disks
 # ["sda.*", "ram1", "loop0"]
 filters:
