--- a/src/test/resources/conf/mount-availability-test.yml
+++ b/src/test/resources/conf/mount-availability-test.yml
@@ -1,18 +1,20 @@
 # Use this only if SIM is enabled
-#metricPrefix: "Custom Metrics|Linux Monitor|"
+metricPrefix: "Custom Metrics|Linux Monitor|"
 
 # If SIM is not enabled, then use this
-metricPrefix: "Server|Component:<TIER_ID>|Custom Metrics|Linux Monitor|"
+#metricPrefix: "Server|Component:<TIER_ID>|Custom Metrics|Linux Monitor|"
 #To find the <COMPONENT_ID> in your environment,
 #please follow the screenshot https://docs.appdynamics.com/display/PRO42/Build+a+Monitoring+Extension+Using+Java
 
-# NFS mounts for which mount data and its I/O data will be reported.
+# An availability status for NFS mounts is reported by executing the command `df | grep <fileSystem> | wc -l`.
 # displayName: the name with which the metric is reported in AppD Metric Browser. If empty, metric is reported with fileSystem as its name.
 mountedNFS:
-      - fileSystem: "devfs"
+      - fileSystem: "/dev"
         displayName: "NFS1"
+      - fileSystem: "/randomMoount"
+        displayName: "NFS2"
 
-# Filters to fetch data only for the configured.
+# "diskIncludes" to fetch disk statistics only for the configured.
 # Ex: ["*"] fetches all disks
 # ["sda.*", "ram1", "loop0"]
 filters:
@@ -31,11 +33,11 @@ metricCharacterReplacer:
 # number of concurrent tasks
 numberOfThreads: 5
 
-#derivedMetrics:
-#    - derivedMetricPath: "diskStats|I/O ops per sec"
-#      formula: "(diskStats|reads completed successfully + diskStats|writes completed)/60"
-#      collectDelta: "true"
-#      metricType: "OBS.AVG.COL"
+derivedMetrics:
+    - derivedMetricPath: "diskStats|I/O ops per sec"
+      formula: "(diskStats|reads completed successfully + diskStats|writes completed)/60"
+      collectDelta: "true"
+      metricType: "OBS.AVG.COL"
 
 #Files used by the extension to fetch monitoring data
 # /proc/stat
